# Cryptonews-Aggregator

./: LICENSE  README.md
Source Code/: Cargo.toml  todo.md
Source Code/src/: main.rs  web_api.rs
Source Code/src/api/: coingecko.rs  cryptopanic.rs  mod.rs  tests.rs
Source Code/src/models/: error.rs  mod.rs  news.rs
Source Code/src/services/: mod.rs  news_service.rs  rate_limiter.rs  tests.rs
Source Code/src/web/: handlers.rs  routes.rs  tests.rs
Source Code/src/web/static/css/: style.css
Source Code/src/web/templates/: index.html  results.html
Source Code/static/: index.html
Source Code/static/css/: style.css
Source Code/static/js/: app.js
