[package]
name = "crypto_news_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
actix-web = "4.0"
actix-files = "0.6"
tera = "1.15"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
lazy_static = "1.4"
